--- a/css/styles.css
+++ b/css/styles.css
@@ -1,73 +1,71 @@
-
 body {
-    color-scheme: dark;
-    background-color: #111111;
-    color: #f8f8f8;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-   
-  }
-p{
-    font-family: "Didact Gothic", sans-serif;
-    font-size: 14px;
-   
-}
-  .card{
-    background-color: #222222;
-    height: auto;
-    width: fit-content;
-    padding: 20px;
-    border-radius: 8px;
-   
-   
-  }
-
-  .title-content{
-    display: flex;
-    align-items: center;
-  }
-  .title-content img{
-    margin-right: 8px;
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-  }
-  .title-content h2{
-    font-family: "Poppins", sans-serif;
-    font-size: 14px;
-    font-weight: 500;
-  }
-  .card-date{
-    display: flex;
-   
-   
-  }
-  .card-date .card-day{
-    margin-right: 4px;
-  }
-.button{
-    background-color: #551825;
-    padding: 8px 20px;
-    text-decoration: none;
-    cursor: pointer;
-    text-transform: uppercase;
-    font-family: "Didact Gothic", sans-serif;
-    font-size: 14px;
-    color: #f8f8f8;
-    border-radius: 20px;
-    text-align: center;
-}
-.card-button{
-    text-align: center;
-    margin: 8px 0px;
-}
-.card-data{
+  color-scheme: dark;
+  background-color: #111111;
+  color: #f8f8f8;
   display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+}
+p {
+  font-family: "Didact Gothic", sans-serif;
+  font-size: 14px;
+}
+.card {
+  background-color: #222222;
+  height: auto;
+  width: fit-content;
+  padding: 20px;
+  border-radius: 8px;
+}
+
+.title-content {
+  display: flex;
+  align-items: center;
+}
+.title-content img {
+  margin-right: 8px;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+}
+.title-content h2 {
+  font-family: "Poppins", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+}
+.card-date {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.card-date .card-day {
+  margin-right: 4px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+.button {
+  background-color: #551825;
+  padding: 8px 20px;
+  text-decoration: none;
+  cursor: pointer;
+  text-transform: uppercase;
+  font-family: "Didact Gothic", sans-serif;
+  font-size: 14px;
+  color: #f8f8f8;
+  border-radius: 20px;
   text-align: center;
 }
-.card-data p{
+.card-button {
+  text-align: center;
+  margin: 8px 0px;
+}
+.card-data {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.card-data p {
   margin-right: 8px;
 }
