--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ p {
   background-color: #222222;
   height: auto;
   width: 400px;
-  padding: 20px;
+  padding: 30px 0px;
   border-radius: 8px;
 }
 
@@ -46,5 +46,4 @@ a {
   border-radius: 20px;
   text-align: center;
   text-align: center;
-  margin-top: 20px;
 }
